welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: identifier expected but 'new' found.
var T : new Array[Color](X);
        ^